--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "reactjs",
   "version": "0.1.0",
-  
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-axios": "^2.0.3",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-scripts": "3.1.1",
