--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "reactjs",
   "version": "0.1.0",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^12.4.0",
+    "@ckeditor/ckeditor5-react": "^1.1.3",
     "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-axios": "^2.0.3",
