--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@ckeditor/ckeditor5-build-classic": "^12.4.0",
     "@ckeditor/ckeditor5-react": "^1.1.3",
     "axios": "^0.19.0",
+    "jquery": "^3.4.1",
+    "multi-select-react": "^0.1.8",
     "react": "^16.9.0",
     "react-axios": "^2.0.3",
     "react-cookie": "^4.0.1",
